# emb-plus-examples

./: .gitmodules  LICENSE  README.md
debian/: changelog  control  copyright  install  rules
filter2d-notebooks/vvas-accel-sw-libs/: CMakeLists.txt
filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_pl/: CMakeLists.txt
filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_pl/src/: vvas_xfilter2d_pl.c
filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_sw/: CMakeLists.txt
simple-app/filter2d-aie/: Makefile  README.md
simple-app/filter2d-aie/src/: aie_control_xrt.cpp  graph.h  host.cpp  kernels.h
simple-app/filter2d-pl/: Makefile  README.md
simple-app/filter2d-pl/src/: host.cpp
vvas-accel-sw-libs/: CMakeLists.txt
vvas-accel-sw-libs/vvas_xfilter2d_pl/src/: vvas_xfilter2d.h  vvas_xfilter2d_pl.bak
